--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,4 +5,5 @@
     <string name="elementOutput_name">Element Number: %1$d\nElement Name (Chinese): %2$s\Symbol: %3$s\n Standard atomic weight: %4$s</string>
     <string name="error_name">Error!</string>
     <string name="button_element">Search Elements</string>
+    <string name="massTextview_name">Welcome to calculate mass of chemicals.</string>
 </resources>
