--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,2 +1,10 @@
 <resources>
+    <string name="app_name">Chemical Tools</string>
+    <string name="button_element">Search Elements</string>
+    <string name="elementButton_name">Search</string>
+    <string name="elementOutput_name">Element Number: %1$d\nElement Name (Chinese): %2$s\Symbol: %3$s\n Standard atomic weight: %4$s</string>
+    <string name="elementTextview_name">Welcome to search for elements!</string>
+    <string name="error_name">Error!</string>
+    <string name="massTextview_name">Welcome to calculate mass of chemicals.</string>
+    <string name="massOutput_name">Mass: %1$f</string>
 </resources>
