--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="error_name">Error!</string>
     <!-- Mass -->
     <string name="massTextview_name">Welcome to calculate mass of chemicals.</string>
-    <string name="massOutput_name">Molar mass: %1$.2f</string>
+    <string name="massOutput_name">%1$s\nMolar mass: %2$.2f</string>
     <string name="massEditText_name">Please input chemical formula.</string>
     <!-- drawer -->
     <string name="drawer_open">drawer_open</string>
