--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,19 @@
     <string name="massOutput_name">%1$s\nMolar mass: %2$.2f</string>
     <string name="massEditText_name">Please input chemical formula.</string>
     <string name="massButton_name">Calculate</string>
+    <string name="massper_name">%2$s (%3$d itoms): atomic weight is %4$s and mass fraction is %5$.2f%%.</string>
+    <!-- Exam -->
+    <string name="examTextview_name">Welcome to exam.</string>
+    <string name="examOutputRight_name">Your answer was right.</string>
+    <string name="examOutputWrong_name">Your answer was wrong.\nThe correct answer: %1$s\nYour answer: %2$s</string>
+    <string name="examEditText_name">Please input symbol of the element.</string>
+    <string name="examButton_name">Input</string>
     <!-- drawer -->
     <string name="drawer_open">drawer_open</string>
     <string name="drawer_close">drawer_close</string>
     <string name="button_element">Search Elements</string>
     <string name="button_mass">Calculate Mass</string>
+    <string name="button_exam">Exam</string>
     <string name="button_Share">Share</string>
     <string name="button_About">About</string>
 </resources>
