--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -2,14 +2,14 @@
     <string name="app_name">元素小管家</string>
     <string name="elementButton_name">查询</string>
     <string name="elementTextview_name">欢迎使用元素查询器！</string>
-    <string name="elementOutput_name">原子序数：%1$d\n元素名称：%2$s\n元素符号：%3$s\n相对原子质量：%4$s</string>
+    <string name="elementOutput_name">原子序数：%1$d\n元素名称：%2$s\n元素符号：%3$s\nIUPAC名：%5$s\n相对原子质量：%4$s\n元素名称含义：%6$s</string>
     <string name="error_name">输入错误，请重新输入！</string>
     <string name="button_element">元素查询</string>
     <string name="massTextview_name">欢迎使用质量计算器！</string>
     <string name="massOutput_name">%1$s\n相对分子质量=%2$.2f</string>
     <string name="button_About">关于</string>
     <string name="button_mass">质量计算</string>
-    <string name="elementEditText_name">请输入元素名称、符号或原子序数。</string>
+    <string name="elementEditText_name">请输入元素名称、符号、原子序数或IUPAC名。</string>
     <string name="massEditText_name">请输入化学式，例如K4[Fe(CN)6]。</string>
     <string name="button_Share">分享</string>
     <string name="massButton_name">计算</string>
