--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Chemical Tools</string>
     <!-- Elements -->
     <string name="elementButton_name">Search</string>
-    <string name="elementOutput_name">Element Number: %1$d\nElement Name: %5$s\nSymbol: %3$s\nElement Name (Chinese): %2$s\nStandard atomic weight: %4$s\nOrigin of the name: %6$s</string>
+    <string name="elementOutput_name">Atomic Number: %1$d\nElement Name: %5$s\nSymbol: %3$s\nStandard atomic weight: %4$s\nOrigin of the name: %6$s</string>
     <string name="elementTextview_name">Welcome to search for elements!</string>
-    <string name="elementEditText_name">Please input the number or name of an element.</string>
+    <string name="elementEditText_name">Please input the atomic number or name of an element.</string>
     <string name="error_name">Error!</string>
     <!-- Mass -->
     <string name="massTextview_name">Welcome to calculate mass of chemicals.</string>
@@ -18,14 +18,26 @@
     <string name="examOutputWrong_name">Your answer was wrong.\nThe correct answer: %1$s\nYour answer: %2$s</string>
     <string name="examEditText_name">Please input symbol of the element.</string>
     <string name="examButton_name">Input</string>
+    <string name="examScoreOutput_name">共回答：%1$d题 答对%2$d题 正确率：%3$.2f%%</string>
+    <string name="examShare_name">Hey! I answered %1$d questions on the app Chemical Tools and the correct rate is %2$.2f%%. Would like to have a try?</string>
     <!-- drawer -->
     <string name="drawer_open">drawer_open</string>
     <string name="drawer_close">drawer_close</string>
     <string name="button_element">Search Elements</string>
     <string name="button_mass">Calculate Mass</string>
     <string name="button_exam">Exam</string>
+    <string name="button_Settings">Settings</string>
     <string name="button_Share">Share</string>
     <string name="button_About">About</string>
-    <string name="title_activity_test">TestActivity</string>
-    <string name="title_activity_main2">Main2Activity</string>
+    <string name="button_Github">Github</string>
+    <!-- Settings -->
+    <string name="setting_elementnumber_limit">Atomic Number Limit</string>
+    <string name="setting_rate">Rate this app</string>
+    <string name="setting_rate_sum">Like the app?Please consider leaving a review in the Store!</string>
+    <string name="setting_feedback">Feedback</string>
+    <string name="setting_clearSettings">Clear settings</string>
+    <string name="setting_others">Others</string>
+    <string name="setting_message">Do you want to clear settings?</string>
+    <string name="postive_button">Yes</string>
+    <string name="negative_button">NO</string>
 </resources>
