--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="button_Github">Github</string>
     <string name="button_open">Open</string>
     <string name="button_notUsed">You\'ve never used this function. Have a try!</string>
+    <string name="button_doyouknow">Do you know?</string>
+    <string name="Change">Change</string>
     <!-- Settings -->
     <string name="setting_elementnumber_limit">Atomic Number Limit</string>
     <string name="setting_rate">Rate this app</string>
