--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -54,4 +54,7 @@
     <string name="button_notUsed">您从未使用过此功能，快来试试吧！</string>
     <string name="button_doyouknow">你知道吗？</string>
     <string name="Change">换一个</string>
+    <string name="setting_examOptionMode">给出选项</string>
+    <string name="setting_examOptionModeOff">题目将不会给出选项，你需要写出正确的答案。</string>
+    <string name="setting_examOptionModeOn">题目将给出选项，你无需自己写出正确的答案。</string>
 </resources>
