--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -56,4 +56,5 @@
     <string name="setting_examOptionMode">Giving options</string>
     <string name="setting_examOptionModeOff">You need to answer questions by yourself.</string>
     <string name="setting_examOptionModeOn">You\'ll be gived options when answering questions.</string>
+    <string name="setting_update">Update this app</string>
 </resources>
