--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -70,4 +70,16 @@
     <string name="basename">Base name</string>
     <string name="elementWikipedia">Visit Wikipedia</string>
     <string name="juhao">.</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="button_user">User centre</string>
+    <string name="button_login">Login</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_out">Sign Out</string>
 </resources>
