--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -71,4 +71,16 @@
     <string name="basename">请输入碱的名称</string>
     <string name="elementWikipedia">访问维基百科</string>
     <string name="juhao">。</string>
+    <string name="action_sign_in_short">登陆</string>
+    <string name="action_sign_in">登陆/注册</string>
+    <string name="button_user">用户中心</string>
+    <string name="button_login">登陆</string>
+    <string name="error_field_required">这是必填项</string>
+    <string name="error_invalid_password">密码太短</string>
+    <string name="error_incorrect_password">密码错误</string>
+    <string name="error_invalid_email">邮箱非法</string>
+    <string name="title_activity_login">登陆</string>
+    <string name="prompt_email">邮箱</string>
+    <string name="prompt_password">密码</string>
+    <string name="action_sign_out">注销</string>
 </resources>
