--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -86,4 +86,5 @@
     <string name="setting_QQ">授权QQ账号</string>
     <string name="setting_wechat">授权微信账号</string>
     <string name="button_rank">排行榜</string>
+    <string name="permission_rationale">权限不足。</string>
 </resources>
