--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Chemical Tools</string>
-    <string name="app_website" translatable="false">https://chem.njzjz.win/</string>
+    <string name="app_website" translatable="false">http://chem.njzjz.win/</string>
     <!-- Elements -->
     <string name="elementButton_name">Search</string>
     <string name="elementOutput_name">Atomic Number: %1$d\nElement Name: %5$s\nSymbol: %3$s\nStandard atomic weight: %4$s\nOrigin of the name: %6$s</string>
